# vigilis-plantae

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
microcontroller/: Cargo.toml  rust-toolchain.toml
microcontroller/.cargo/: config.toml
microcontroller/src/: main.rs
web/: mix.exs
web/config/: config.exs  dev.exs  test.exs
web/lib/web_web/: endpoint.ex
